--- a/room.css
+++ b/room.css
@@ -85,3 +85,12 @@ background: #c42e3b !important;
 #dj-button .left {
 background: #5d62a5 !important;
 }
+.header-panel-button.selected, #footer-user .buttons .button.store:hover, #footer-user .buttons .button:hover, #app-menu .list .logout:hover {
+    background: rgba(0, 0, 0, 0.95) !important;
+}
+.app-right .friends .list .row.clickable .room, #room-settings .general-settings a, #room-settings .general-settings a:visited {
+    color: rgba(93,98,165, 0.8)!important;
+}
+.experience .xp .bar .progress, #footer-user .info .bar .progress, .experience .levels .level.earned.avatar .label {
+	background: #5D62A5 !important;
+}
