--- a/room.css
+++ b/room.css
@@ -38,18 +38,26 @@
 #chat .welcome {
     color: #ffffff !important;
 }
-#chat .emote, #chat .message, #chat .moderation, #chat .skip, #chat .system, #chat .update, #chat .welcome, #chat .cm, #chat .emote:nth-child(2n+1),#chat .message:nth-child(2n+1), #chat .moderation:nth-child(2n+1), #chat .skip:nth-child(2n+1), #chat .system:nth-child(2n+1), #chat .update:nth-child(2n+1), #chat .welcome:nth-child(2n+1), #chat .cm:nth-child(2n+1) {
-    background-color: rgba(44,60,85,10) !important;
+#chat .emote, #chat .message, #chat .moderation, #chat .skip, #chat .system, #chat .update, #chat .welcome, #chat .cm {
+background-color: rgba(61,84,119,10)
+}
+#chat .emote:nth-child(2n+1),#chat .message:nth-child(2n+1), #chat .moderation:nth-child(2n+1), #chat .skip:nth-child(2n+1), #chat .system:nth-child(2n+1), #chat .update:nth-child(2n+1), #chat .welcome:nth-child(2n+1), #chat .cm:nth-child(2n+1) {
+    background-color: rgba(44,60,85,10);
 }
 #chat .mention, #chat .mention:nth-child(2n+1),  #chat .mention.is-dj, #chat .mention.is-staff, #chat .mention.is-dj:nth-child(2n+1), #chat .mention.is-staff:nth-child(2n+1) {
     background: linear-gradient(to left, rgba(61,84,119,10) 0%,rgba(0,0,0,0.75) 100%) !important;
     border-left: rgba(61,84,119,10) 3px solid !important;
+}
+/*
+#chat .emote, #chat .message, #chat .moderation, #chat .skip, #chat .system, #chat .update, #chat .welcome, #chat .cm, #chat .emote:nth-child(2n+1),#chat .message:nth-child(2n+1), #chat .moderation:nth-child(2n+1), #chat .skip:nth-child(2n+1), #chat .system:nth-child(2n+1), #chat .update:nth-child(2n+1), #chat .welcome:nth-child(2n+1), #chat .cm:nth-child(2n+1) {
+    background-color: rgba(44,60,85,10) !important;
 }
 #chat-messages :nth-child(odd).cm,
 #chat-messages :nth-child(odd).message {
   -webkit-box-shadow: inset 0px 0px 0px 200px rgba(61,84,119,10) !important;
   box-shadow: inset 0px 0px 0px 200px rgba(61,84,119,10) !important;
 }
+*/
 #user-lists .list .user:hover, #waitlist .list .user {
 	background: linear-gradient(to right, rgba(61,84,119,0.7) 0%,rgba(0,0,0,0) 100%) !important;
 }
